Fixed display names

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -78,6 +78,7 @@ stages:
 
           - script: |
               dotnet pack -c $(buildConfiguration)
+            displayName: 'Pack Template'
             workingDirectory: $(templatePath)
 
           - task: PublishBuildArtifacts@1
