--- a/sdk/dotnet/src/Microsoft.AspNetCore.Datasync/Microsoft.AspNetCore.Datasync.csproj
+++ b/sdk/dotnet/src/Microsoft.AspNetCore.Datasync/Microsoft.AspNetCore.Datasync.csproj
@@ -4,6 +4,7 @@
     <Company>Microsoft Corporation</Company>
     <Copyright>Copyright (c) 2021 Microsoft Corporation.</Copyright>
     <Description>An ASP.NET Core based framework for synchronizing structured data between a database and a client application.</Description>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <IconUrl>http://go.microsoft.com/fwlink/?LinkID=288890</IconUrl>
     <LangVersion>9.0</LangVersion>
     <NeutralLanguage>en</NeutralLanguage>
