--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -42,6 +42,7 @@ stages:
 
       - job: buildtemplate
         displayName: 'Build .NET Core Template'
+        dependsOn: [ 'prebuild' ]
         steps:
           - task: UseDotNet@2
             inputs:
