--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -6,75 +6,73 @@ pr:
   - main
 
 pool:
-    vmImage: 'windows-2019'
+  vmImage: 'windows-2019'
 
 variables:
-  AREA_PATH: 'DevDiv\Xamarin SDK'
-  sdkPath: 'sdk/dotnet'
-  templatePath: 'templates/dotnet'
   buildConfiguration: 'Release'
+  netSdkPath: 'sdk/dotnet'
+  netSdkSolution: '$(netSdkPath)/Datasync.Framework.sln'
   BASE_VERSION: 5.0.0
   PREVIEW_LABEL: 'preview'
   BUILD_NUMBER: $[counter(format('{0}_{1}_{2}', variables['BASE_VERSION'], variables['PREVIEW_LABEL'], variables['Build.SourceBranch']), 1)]
   NUGET_VERSION: $[format('{0}-{1}.{2}', variables['BASE_VERSION'], variables['PREVIEW_LABEL'], variables['BUILD_NUMBER'])]
 
-resources:
-  repositories:
-    - repository: internal-templates
-      type: github
-      name: xamarin/yaml-templates
-      endpoint: xamarin
-    - repository: components
-      type: github
-      name: xamarin/XamarinComponents
-      endpoint: xamarin
-
 stages:
-  - stage: buildnetsdk
-    displayName: Build .NET SDK
-    dependsOn: []
+  - stage: build
+    displayName: Build SDK
     jobs:
-      - template: .ci/build.yml@components
-        parameters:
-          displayName: 'Build .NET on'
-          publishJob: windows
-          # Disable building on mac and linux - we only build on Windows
-          macosImage: ''
-          linuxImage: ''
-          windowsImage: 'windows-2019'
-          areaPath: $(AREA_PATH)
-          cakeFile: '$(sdkPath)/build.cake'
-          validPackagePrefixes:
-            - Microsoft.AspNetCore.Datasync
-            - Microsoft.Datasync.Client
-          preBuildSteps:
-            - pwsh: |
-                New-Item -Path 'output' -ItemType Directory
-              displayName: Precreate output directory
-            - pwsh: |
-                $pr = "pr." + $env:SYSTEM_PULLREQUEST_PULLREQUESTNUMBER
-                $nuget = $env:BASE_VERSION + "-" + $pr + "." + $env:BUILD_NUMBER
-                Write-Host "Preview label: $pr"
-                Write-Host "NuGet version: $nuget"
-                Write-Host "##vso[task.setvariable variable=PREVIEW_LABEL]$pr"
-                Write-Host "##vso[task.setvariable variable=NUGET_VERSION]$nuget"
-              displayName: Use a special preview label for PRs
-              condition: eq(variables['Build.Reason'], 'PullRequest')
-            - pwsh: |
-                $tagVersion = $env:BUILD_SOURCEBRANCHNAME
-                Write-Host "Tag version: $tagVersion"
-                Write-Host "##vso[task.setvariable variable=NUGET_VERSION]$tagVersion"
-              displayName: Override version for tags
-              condition: startsWith(variables['Build.SourceBranch'], 'refs/tags/')
-            - pwsh: |
-                Write-Host "##vso[build.updatebuildnumber]$env:NUGET_VERSION"
-              displayName: Update the build number with a more readable one
+      - job: buildnetsdk
+        displayName: Build .NET SDK
+        steps:
+          - task: UseDotNet@2
+            inputs:
+              version: '5.0.x'
+              performMultiLevelLookup: true
 
-  - ${{ if eq(variables['System.TeamProject'], 'devdiv') }}:
-    - stage: signing
-      displayName: Sign .NET SDK
-      dependsOn: [ 'buildnetsdk' ]
-      jobs:
-        - template: sign-artifacts/jobs/v2.yml@internal-templates
-          parameters:
-            codeSignOverride: startsWith(variables['Build.SourceBranch'], 'refs/tags/')
+          - task: NuGetToolInstaller@1
+            inputs:
+              checkLatest: true
+          
+          - task: MSBuild@1
+            displayName: 'Build SDK'
+            inputs:
+              configuration: $(buildConfiguration)
+              solution: $(netSdkSolution)
+              msBuildArguments: '/nologo /t:Restore;Build;Pack /p:PackageVersion=$(NUGET_VERSION) /p:Version=$(BASE_VERSION) /bl /clp:DisableConsoleColor;Verbosity:normal;PerformanceSummary /fl'
+
+          - task: PublishBuildArtifacts@1
+            displayName: Publish Build Artifacts
+            inputs:
+              pathToPublish: $(netSdkPath)
+              artifactName: build
+              fileCopyOptions: 'bin obj /s /fp'
+
+          - task: VSTest@2
+            displayName: 'Run Unit Tests'
+            inputs:
+              testAssemblyVer2: '**\Microsoft.*.Test.dll'
+              searchFolder: $(netSdkPath)
+              codeCoverageEnabled: true
+              diagnosticsEnabled: true
+              configuration: $(buildConfiguration)
+
+          - task: PublishBuildArtifacts@1
+            displayName: Publish Test Artifacts
+            inputs:
+              pathToPublish: $(netSdk)/TestResults
+              artifactName: test
+              fileCopyOptions: '/s /fp'
+
+          - task: DotNetCoreCLI@2
+            displayName: 'Build Template'
+            inputs:
+              command: pack
+              projects: '$(netSdkPath)/templates/*.csproj'
+              configuration: $(buildConfiguration)
+
+          - task: PublishBuildArtifacts@1
+            displayName: Publish NuGet Packages
+            inputs:
+              pathToPublish: $(netSdk)
+              artifactName: nuget
+              fileCopyOptions: '*.nupkg /s /fp'
