--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,6 +17,13 @@ variables:
   BUILD_NUMBER: $[counter(format('{0}_{1}_{2}', variables['BASE_VERSION'], variables['PREVIEW_LABEL'], variables['Build.SourceBranch']), 1)]
   NUGET_VERSION: $[format('{0}-{1}.{2}', variables['BASE_VERSION'], variables['PREVIEW_LABEL'], variables['BUILD_NUMBER'])]
 
+resources:
+  repositories:
+    - repository: internal-templates
+      type: github
+      name: xamarin/yaml-templates
+      endpoint: xamarin
+
 stages:
   - stage: build
     displayName: Build SDK
@@ -32,7 +39,27 @@ stages:
           - task: NuGetToolInstaller@1
             inputs:
               checkLatest: true
+
+          - pwsh: |
+              $pr = "pr." + $env:SYSTEM_PULLREQUEST_PULLREQUESTNUMBER
+              $nuget = $env:BASE_VERSION + "-" + $pr + "." + $env:BUILD_NUMBER
+              Write-Host "Preview label: $pr"
+              Write-Host "NuGet version: $nuget"
+              Write-Host "##vso[task.setvariable variable=PREVIEW_LABEL]$pr"
+              Write-Host "##vso[task.setvariable variable=NUGET_VERSION]$nuget"
+            displayName: Use a special preview label for PRs
           
+          - pwsh: |
+              $tagVersion = $env:BUILD_SOURCEBRANCHNAME
+              Write-Host "Tag version: $tagVersion"
+              Write-Host "##vso[task.setvariable variable=NUGET_VERSION]$tagVersion"
+            displayName: Override version for tags
+            condition: startsWith(variables['Build.SourceBranch'], 'refs/tags/')
+
+          - pwsh: |
+              Write-Host "##vso[build.updatebuildnumber]$env:NUGET_VERSION"
+            displayName: Update the build number with a more readable one 
+
           - task: MSBuild@1
             displayName: 'Build SDK'
             inputs:
@@ -45,7 +72,9 @@ stages:
             inputs:
               pathToPublish: $(netSdkPath)
               artifactName: build
-              fileCopyOptions: 'bin obj /s /fp'
+              fileCopyOptions: |
+                bin/$(buildConfiguration)/**/*.dll 
+                bin/$(buildConfiguration)/**/*.pdb
 
           - task: VSTest@2
             displayName: 'Run Unit Tests'
@@ -60,13 +89,6 @@ stages:
               runTestsInIsolation: true
               configuration: $(buildConfiguration)
 
-          - task: PublishBuildArtifacts@1
-            displayName: Publish Test Artifacts
-            inputs:
-              pathToPublish: $(netSdk)/TestResults
-              artifactName: test
-              fileCopyOptions: '/s /fp'
-
           - task: DotNetCoreCLI@2
             displayName: 'Build Template'
             inputs:
@@ -79,4 +101,14 @@ stages:
             inputs:
               pathToPublish: $(netSdk)
               artifactName: nuget
-              fileCopyOptions: '*.nupkg /s /fp'
+              fileCopyOptions: |
+                bin/$(buildConfiguration)/**/*.nupkg
+
+  - stage: signing
+    displayName: Sign SDK
+    dependsOn: [ 'buildsdk' ]
+    jobs:
+      - template: sign-artifacts/jobs/v2.yml@internal-templates
+        parameters:
+          codeSignOverride: startsWith(variables['Build.SourceBranch'], 'refs/tags/')
+  
