--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -122,7 +122,7 @@ stages:
           - pwsh: |
               dotnet pack DatasyncTemplates.csproj --configuration $(buildConfiguration) /p:PackageVersion=$(NUGET_VERSION)
             displayName: Build Template
-            workingDirectory: $(netSdkPath)
+            workingDirectory: '$(netSdkPath)/templates'
             
           - task: PublishBuildArtifacts@1
             displayName: Publish NuGet Packages
