--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -61,10 +61,6 @@ stages:
               Write-Host "##vso[build.updatebuildnumber]$env:NUGET_VERSION"
             displayName: Update the build number with a more readable one 
 
-          - pwsh: |
-              New-Item -Force -Path '$(Build.ArtifactStagingDirectory)' -ItemType Directory
-            displayName: Create Artifacts Storage
-
           - task: MSBuild@1
             displayName: 'Build SDK'
             inputs:
@@ -73,25 +69,8 @@ stages:
               msBuildArguments: '/nologo /t:Restore;Build;Pack /p:PackageVersion=$(NUGET_VERSION) /p:Version=$(BASE_VERSION) /bl /clp:DisableConsoleColor;Verbosity:normal;PerformanceSummary /fl'
 
           - pwsh: |
-              Get-ChildItem -Path '$(netSdkPath)/src' -Include *Datasync*.dll,*Datasync*.pdb,*.binlog -Recurse | Copy-Item -Verbose -Destination '$(Build.ArtifactStagingDirectory)'
+              Copy-Item -Verbose -Path '$(netSdkPath/src/Microsoft.*/bin/$(buildConfiguration)' -Include '$(buildArtifacts)' -Destination '$(Build.ArtifactStagingDirectory)' -Recurse
             displayName: Consolidate build artifacts
-
-          - task: PublishBuildArtifacts@1
-            displayName: Publish
-            inputs:
-              pathToPublish: $(Build.ArtifactStagingDirectory)
-              artifactName: build
-
-          - pwsh: |
-              New-Item -Force -Path './artifacts-nuget' -ItemType Directory
-              Get-ChildItem -Path '$(netSdkPath)/src -Include *.nupkg,*.nuspec -Recurse' | Copy-Item -Verbose -Destination './artifacts-nuget'
-            displayName: Consolidate NuGet artifacts
-
-          - task: PublishBuildArtifacts@1
-            displayName: Publish NuGet Packages
-            inputs:
-              PathtoPublish: './artifacts-nuget'
-              artifactName: nuget
 
           - task: VSTest@2
             displayName: 'Run Unit Tests'
@@ -105,6 +84,10 @@ stages:
               diagnosticsEnabled: true
               runTestsInIsolation: true
               configuration: $(buildConfiguration)
+
+          - template: .ci/publish.yml
+            parameters:
+              directory: '$(netSdkPath)/Microsoft.*/bin/$(buildConfiguration)'
 
       - job: buildnettemplate
         displayName: Build .NET Core Template
@@ -139,31 +122,10 @@ stages:
               dotnet pack DatasyncTemplates.csproj --configuration $(buildConfiguration) /p:PackageVersion=$(NUGET_VERSION)
             displayName: Build Template
             workingDirectory: '$(netSdkPath)/templates'
-            
-          - pwsh: |
-              New-Item -Force -Path '$(Build.ArtifactStagingDirectory)' -ItemType Directory
-            displayName: Create Artifacts Storage
 
-          - pwsh: |
-              Get-ChildItem -Path '$(netSdkPath)/templates' -Include *Datasync*.dll,*Datasync*.pdb,*.binlog -Recurse | Copy-Item -Verbose -Destination '$(Build.ArtifactStagingDirectory)'
-            displayName: Consolidate build artifacts
-
-          - pwsh: |
-              New-Item -Force -Path './artifacts-nuget' -ItemType Directory
-              Get-ChildItem -Path '$(netSdkPath)/templates' -Include *.nupkg,*.nuspec -Recurse | Copy-Item -Verbose -Destination './artifacts-nuget'
-            displayName: Consolidate NuGet artifacts
-
-          - task: PublishBuildArtifacts@1
-            displayName: Publish Build Artifacts
-            inputs:
-              pathToPublish: '$(Build.ArtifactStagingDirectory)'
-              artifactName: build
-
-          - task: PublishBuildArtifacts@1
-            displayName: Publish NuGet Packages
-            inputs:
-              PathtoPublish: ./artifacts-nuget
-              artifactName: nuget
+          - template: .ci/publish.yml
+            parameters:
+              directory: '$(netSdkPath)/templates/bin/$(buildConfiguration)'
 
   - stage: sign
     displayName: Sign SDK
