--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -31,35 +31,7 @@ stages:
       - job: buildnetsdk
         displayName: Build .NET SDK
         steps:
-          - task: UseDotNet@2
-            inputs:
-              version: '5.0.x'
-              performMultiLevelLookup: true
-
-          - task: NuGetToolInstaller@1
-            inputs:
-              checkLatest: true
-
-          - pwsh: |
-              $pr = "pr." + $env:SYSTEM_PULLREQUEST_PULLREQUESTNUMBER
-              $nuget = $env:BASE_VERSION + "-" + $pr + "." + $env:BUILD_NUMBER
-              Write-Host "Preview label: $pr"
-              Write-Host "NuGet version: $nuget"
-              Write-Host "##vso[task.setvariable variable=PREVIEW_LABEL]$pr"
-              Write-Host "##vso[task.setvariable variable=NUGET_VERSION]$nuget"
-            displayName: Override version for PRs
-            condition: eq(variables['Build.Reason'], 'PullRequest')
-
-          - pwsh: |
-              $tagVersion = $env:BUILD_SOURCEBRANCHNAME
-              Write-Host "Tag version: $tagVersion"
-              Write-Host "##vso[task.setvariable variable=NUGET_VERSION]$tagVersion"
-            displayName: Override version for tags
-            condition: startsWith(variables['Build.SourceBranch'], 'refs/tags/')
-
-          - pwsh: |
-              Write-Host "##vso[build.updatebuildnumber]$env:NUGET_VERSION"
-            displayName: Update the build number with a more readable one 
+          - template: .ci/prebuild.yml
 
           - task: MSBuild@1
             displayName: 'Build SDK'
@@ -81,45 +53,21 @@ stages:
               runTestsInIsolation: true
               configuration: $(buildConfiguration)
 
-          - template: .ci/publish.yml
+          - template: .ci/postbuild.yml
             parameters:
               sourceDirectory: '$(netSdkPath)/Microsoft.*/bin/$(buildConfiguration)'
 
       - job: buildnettemplate
         displayName: Build .NET Core Template
         steps:
-          - task: UseDotNet@2
-            inputs:
-              version: '5.0.x'
-              performMultiLevelLookup: true
-
-          - pwsh: |
-              $pr = "pr." + $env:SYSTEM_PULLREQUEST_PULLREQUESTNUMBER
-              $nuget = $env:BASE_VERSION + "-" + $pr + "." + $env:BUILD_NUMBER
-              Write-Host "Preview label: $pr"
-              Write-Host "NuGet version: $nuget"
-              Write-Host "##vso[task.setvariable variable=PREVIEW_LABEL]$pr"
-              Write-Host "##vso[task.setvariable variable=NUGET_VERSION]$nuget"
-            displayName: Override version for PRs
-            condition: eq(variables['Build.Reason'], 'PullRequest')
-            
-          - pwsh: |
-              $tagVersion = $env:BUILD_SOURCEBRANCHNAME
-              Write-Host "Tag version: $tagVersion"
-              Write-Host "##vso[task.setvariable variable=NUGET_VERSION]$tagVersion"
-            displayName: Override version for tags
-            condition: startsWith(variables['Build.SourceBranch'], 'refs/tags/')
-
-          - pwsh: |
-              Write-Host "##vso[build.updatebuildnumber]$env:NUGET_VERSION"
-            displayName: Update the build number with a more readable one
+          - template: .ci/prebuild.yml
 
           - pwsh: |
               dotnet pack DatasyncTemplates.csproj --configuration $(buildConfiguration) /p:PackageVersion=$(NUGET_VERSION)
             displayName: Build Template
             workingDirectory: '$(netSdkPath)/templates'
 
-          - template: .ci/publish.yml
+          - template: .ci/postbuild.yml
             parameters:
               sourceDirectory: '$(netSdkPath)/templates/bin/$(buildConfiguration)'
 
